[gd_scene load_steps=8 format=3 uid="uid://ckhmm36sa88xv"]

[ext_resource type="PackedScene" uid="uid://bvw0ypa3tkwga" path="res://scenes/interactable.tscn" id="2_e4gkq"]
[ext_resource type="Script" path="res://scripts/DialogueLayer.gd" id="2_uga1u"]
[ext_resource type="Script" path="res://scripts/Camera3D.gd" id="3_0qm8k"]
[ext_resource type="PackedScene" uid="uid://kckhnjx3gg0o" path="res://scenes/dialogue_scene.tscn" id="4_lbbjr"]
[ext_resource type="Script" path="res://scripts/Pivot.gd" id="5_4vp4n"]
[ext_resource type="PackedScene" uid="uid://dsberelpj75c1" path="res://scenes/startup_scene.tscn" id="5_km7y5"]

[sub_resource type="ImageTexture" id="ImageTexture_jfkdy"]

[node name="Main" type="Node3D"]

[node name="Sprite3D" type="Sprite3D" parent="."]
texture = SubResource("ImageTexture_jfkdy")

[node name="Interactable" parent="Sprite3D" instance=ExtResource("2_e4gkq")]

[node name="Outline" parent="Sprite3D/Interactable/MeshInstance3D" index="0"]
visible = true
gi_mode = 0
gi_lightmap_scale = 2

[node name="DialogueLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_uga1u")
text_speed = 0.05

[node name="DialogueUI" parent="DialogueLayer" instance=ExtResource("4_lbbjr")]

[node name="MainMenu" parent="DialogueLayer" instance=ExtResource("5_km7y5")]

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05614, 2.18036)

[node name="Pivot" type="Node3D" parent="."]
script = ExtResource("5_4vp4n")

[node name="Camera3D" type="Camera3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 0.82894, 0.559338, 0, -0.559338, 0.82894, 0, 1.05066, 2.04933)
fov = 88.6602
script = ExtResource("3_0qm8k")

[connection signal="input_event" from="Sprite3D/Interactable" to="Pivot/Camera3D" method="_on_interactable_input_event"]
[connection signal="mouse_entered" from="Sprite3D/Interactable" to="Pivot/Camera3D" method="_on_interactable_mouse_entered"]
[connection signal="mouse_exited" from="Sprite3D/Interactable" to="Pivot/Camera3D" method="_on_interactable_mouse_exited"]

[editable path="Sprite3D/Interactable"]
